--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   align-items: flex-start; /* align at the top */
-  padding-top: 320px; /* fixed spacing */
+  padding-top: 340px; /* fixed spacing */
   width: 100%;
   height: 100vh;
   overflow: hidden;
@@ -12,7 +12,7 @@
   position: relative;
   height: 115vh; /* 30% taller than screen */
   aspect-ratio: 16 / 9;
-  bottom: 28%;
+  bottom: 30%;
   will-change: transform; /* added for smoother rise */
 }
 
@@ -107,7 +107,7 @@
 .rug {
   position: absolute;
   bottom: 52%;
-  left: 38%;
-  width: 25%;
+  left: 37%;
+  width: 27%;
   pointer-events: none;
 }
